--- a/oc.yaml
+++ b/oc.yaml
@@ -34,13 +34,13 @@ spec:
                 name: mi-configmap2
             - secretRef:
                 name: mi-secret2
-          volumeMounts:
-            - name: datos
-              mountPath: "/app/data"
-      volumes:
-        - name: datos
-          persistentVolumeClaim:
-            claimName: mi-pvc20
+         # volumeMounts:
+           # - name: datos
+            #  mountPath: "/app/data"
+     # volumes:
+      #  - name: datos
+       #   persistentVolumeClaim:
+        #    claimName: mi-pvc20
 ---
 apiVersion: v1
 kind: Service
@@ -94,15 +94,15 @@ spec:
         type: Utilization
         averageUtilization: 100
 ---
-apiVersion: v1
-kind: PersistentVolumeClaim
-metadata:
-  name: mi-pvc20
-  namespace: santiago-parraga-dev
-spec:
-  accessModes:
-    - ReadWriteMany
-  resources:
-    requests:
-      storage: 1Gi
-  storageClassName: gp3
+#apiVersion: v1
+#kind: PersistentVolumeClaim
+#metadata:
+ # name: mi-pvc20
+ # namespace: santiago-parraga-dev
+#spec:
+ # accessModes:
+  #  - ReadWriteMany
+  #resources:
+   # requests:
+    #  storage: 1Gi
+  #storageClassName: gp3
