--- a/oc.yaml
+++ b/oc.yaml
@@ -34,6 +34,26 @@ spec:
                 name: mi-configmap2
             - secretRef:
                 name: mi-secret2
+          startupProbe:
+            httpGet:
+              path: /startup
+              port: 3000
+            failureThreshold: 5
+            periodSeconds: 10
+          readinessProbe:
+            httpGet:
+              path: /readiness
+              port: 3000
+            failureThreshold: 5
+            initialDelaySeconds: 0
+            periodSeconds: 10
+          livenessProbe:
+            httpGet:
+              path: /health
+              port: 3000
+            failureThreshold: 5
+            initialDelaySeconds: 0
+            periodSeconds: 10
 ---
 apiVersion: v1
 kind: Service
