--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -51,6 +51,10 @@ jobs:
           curl -L https://mirror.openshift.com/pub/openshift-v4/clients/ocp/latest/openshift-client-linux.tar.gz | tar xz
           sudo mv oc /usr/local/bin/
           oc version
+      - name: Install Helm
+        uses: azure/setup-helm@v3
+        with:
+          version: v3.12.0
       - name: Log in Openshift
         uses: redhat-actions/oc-login@v1
         with:
@@ -60,10 +64,10 @@ jobs:
         run: |
           echo "Reemplazando {{ tag }} con ${{ github.run_number }}"
           sed -i "s|{{ tag }}|${{ github.run_number }}|g" oc.yaml
-          cat oc.yaml
+          cat values.yaml
 
       - name: Deploy files
         run: |
-          oc project santiago-parraga-dev
-          oc apply -f oc.yaml
-          oc rollout status deployment/mi-deployment2
+           oc project santiago-parraga-dev
+           helm show chart oci://registry-1.docker.io/santiagoparraga/mi-chart --version 4
+            helm upgrade --install microservicio-2 oci://registry-1.docker.io/santiagoparraga/mi-chart --version 4 --values values.yaml
